src/nationalarchives/utilities/_global.scss
@use "../tools/colour";
@use "../tools/media";
@use "../tools/spacing";
@use "../variables/typography";

:root {
  @include colour.colour-css-vars;
}

.tna-template {
  min-width: 320px;
  width: 100%;
  height: 100%;

  /*
   * ------------------------------------------
   * Support ended with iOS 13 released on 19th
   * September 2019. Deprecate in the future if
   * iOS <13 share drops low enough.
   * https://caniuse.com/mdn-css_properties_-webkit-overflow-scrolling
   * ------------------------------------------
   */
  -webkit-overflow-scrolling: touch;

  font-size: #{typography.$relative-1rem-px}px;

  @include colour.colour-background("page-background");

  accent-color: var(--accent);

  &--system-theme {
    @include colour.colour-css-vars;

    @media (prefers-color-scheme: dark) {
      @include colour.colour-css-vars-dark;
    }

    @media (prefers-contrast: more) {
      @include colour.colour-css-vars-high-contrast;

      * {
        background-image: none !important;
      }
    }

    @media (prefers-contrast: more) and (prefers-color-scheme: dark) {
      @include colour.colour-css-vars-high-contrast-dark;
    }
  }

  &--light-theme {
    @include colour.colour-css-vars;
  }

  &--dark-theme {
    @include colour.colour-css-vars-dark;
  }

  &--high-contrast-theme {
    @include colour.colour-css-vars-high-contrast;

    * {
      background-image: none !important;
    }

    &.tna-template--dark-theme {
      @include colour.colour-css-vars-high-contrast-dark;
    }
  }

  &--black-accent {
    @include colour.accent-css-vars("black");
  }

  &--yellow-accent {
    @include colour.accent-css-vars("yellow");
  }

  &--pink-accent {
    @include colour.accent-css-vars("pink");
  }

  &--orange-accent {
    @include colour.accent-css-vars("orange");
  }

  &--green-accent {
    @include colour.accent-css-vars("green");
  }

  &--blue-accent {
    @include colour.accent-css-vars("blue");
  }

  @media (prefers-reduced-motion) {
    * {
      animation: none !important;
      transition: none !important;
    }
  }
}

.tna-template__body {
  min-height: 100%;
  margin: 0;
  padding: 0;

  &:has(.tna-header):has(#main-content[role="main"]):has(.tna-footer) {
    display: flex;
    flex-direction: column;

    #main-content[role="main"] {
      flex: 1;
    }
  }
}

img,
svg,
picture,
video,
canvas {
  max-width: 100%;

  display: block;
}

video,
canvas {
  width: 100%;
}

[hidden] {
  display: none;
}

hr {
  margin: 0;

  @include colour.colour-border("keyline", 1px, solid, top);
}

.tna-section {
  padding-top: 3rem;
  padding-bottom: 3rem;

  @include media.on-mobile {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

.tna-aside {
  padding: 2rem;

  @include spacing.space-above;

  @include media.on-mobile {
    padding: 1rem;
  }

  @include colour.on-high-contrast {
    @include colour.colour-border("keyline-dark", 1px);
  }

  &--tight {
    padding: 1rem;
  }
}

.tna-background {
  &--contrast {
    @include colour.invert;
  }

  &--accent {
    @include colour.accent;
  }

  &--accent-light {
    @include colour.light-accent-background;
  }

  &--tint {
    @include colour.tint-background;
  }
}

